--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
-# Homepage
-
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Home Page</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f0f0;
-        }
-        .button-container {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-        .button {
-            padding: 15px 30px;
-            font-size: 18px;
-            color: white;
-            background-color: #007BFF;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            text-align: center;
-            text-decoration: none;
-        }
-        .button:hover {
-            background-color: #0056b3;
-        }
+      body {
+        font-family: Pipe Dream, BrianneTod;
+        margin: 0;
+        padding: 0;
+      }
+
+      .taskbar {
+        background-color: #333;
+        overflow: hidden;
+      }
+
+      .taskbar a {
+        float: left;
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+
+      .taskbar a:hover {
+        background-color: #ddd;
+        color: black;
+      }
     </style>
-</head>
-<body>
-    <div class="button-container">
-        <a href="https://woodpeckerotic-games.github.io/prodigen.github.io/play.html" class="button">Play</a>
-        <a href="https://woodpeckerotic-games.github.io/prodigen.github.io/contact.html" class="button">Contact</a>
-        <a href="https://woodpeckerotic-games.github.io/prodigen.github.io/" class="button">Homepage</a>
-        <a href="https://woodpeckerotic-games.github.io/prodigen.github.io/news.html" class="button">News</a>
+  </head>
+  <body>
+    <div class="taskbar">
+      <a href="https://woodpeckerotic-games.github.io/prodigen.github.io/">Homepage</a>
+      <a href="https://xpmuser.github.io/Website-Tester/6-136-0">Play 6-136-0</a>
+      <a href="https://woodpeckerotic-games.github.io/prodigen.github.io/play?mods=WalkSpeed,FastGameSpeed">Play</a>
+      <a href="https://woodpeckerotic-games.github.io/prodigen.github.io/news.html">News</a>
     </div>
-</body>
+
+    <h1>Welcome to the Prodigen's website!</h1>
+
+    <p>This is a early version of the game so to warn ya all!.</p>
+  </body>
 </html>
